# SanJegoBot

./: CMakeLists.txt  README.md
.github/workflows/: platform_independency.yml  quality_assurance.yml
include/libsanjego/: bot.hpp  gameobjects.hpp  rulesets.hpp  types.hpp
src/: gameobjects.cpp  rulesets.cpp
test/: CMakeLists.txt  catch_main.cpp  test_bot.cpp  test_gameobjects.cpp  test_rulesets.cpp
